--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-                <h5>Hómérséklet</h5>
+                <h5>Hőmérséklet</h5>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="temperature" id="celsiusRadio" checked>
                     <label class="form-check-label" for="celsiusRadio">
@@ -60,6 +60,19 @@
                 <input class="form-check-input" type="radio" name="temperature" id="fahrenheitRadio">
                 <label class="form-check-label" for="fahrenheitRadio">
                     Fahrenheit °F
+                </label>
+                </div> 
+                <h5>Légnyomás</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="pressure" id="pressureMbRadio" checked>
+                    <label class="form-check-label" for="pressureMbRadio">
+                        hPa
+                    </label>
+                </div>
+                <div class="form-check">
+                <input class="form-check-input" type="radio" name="pressure" id="pressureInRadio">
+                <label class="form-check-label" for="pressureInRadio">
+                    inHg
                 </label>
                 </div> 
             </div>
