wind speed unit is changeable

--- a/index.html
+++ b/index.html
@@ -70,9 +70,22 @@
                     </label>
                 </div>
                 <div class="form-check">
-                <input class="form-check-input" type="radio" name="pressure" id="pressureInRadio">
-                <label class="form-check-label" for="pressureInRadio">
-                    inHg
+                    <input class="form-check-input" type="radio" name="pressure" id="pressureInRadio">
+                    <label class="form-check-label" for="pressureInRadio">
+                        inHg
+                    </label>
+                </div>
+                <h5>Sebesség</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="speed" id="kmhRadio" checked>
+                    <label class="form-check-label" for="kmhRadio">
+                        km/h
+                    </label>
+                </div>
+                <div class="form-check">
+                <input class="form-check-input" type="radio" name="speed" id="mphRadio">
+                <label class="form-check-label" for="mphRadio">
+                    mph
                 </label>
                 </div> 
             </div>
