--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         inHg
                     </label>
                 </div>
-                <h5>Sebesség</h5>
+                <h5>Szél</h5>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="speed" id="kmhRadio" checked>
                     <label class="form-check-label" for="kmhRadio">
@@ -86,6 +86,19 @@
                 <input class="form-check-input" type="radio" name="speed" id="mphRadio">
                 <label class="form-check-label" for="mphRadio">
                     mph
+                </label>
+                </div> 
+                <h5>Csapadék</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="precipitation" id="precipitationMmRadio" checked>
+                    <label class="form-check-label" for="precipitationMmRadio">
+                        mm
+                    </label>
+                </div>
+                <div class="form-check">
+                <input class="form-check-input" type="radio" name="precipitation" id="precipitationInRadio">
+                <label class="form-check-label" for="precipitationInRadio">
+                    inches
                 </label>
                 </div> 
             </div>
