--- a/index.html
+++ b/index.html
@@ -98,7 +98,20 @@
                 <div class="form-check">
                 <input class="form-check-input" type="radio" name="precipitation" id="precipitationInRadio">
                 <label class="form-check-label" for="precipitationInRadio">
-                    inches
+                    inch
+                </label>
+                </div> 
+                <h5>Látótávolság</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="visibility" id="visibilityKmRadio" checked>
+                    <label class="form-check-label" for="visibilityKmRadio">
+                        km
+                    </label>
+                </div>
+                <div class="form-check">
+                <input class="form-check-input" type="radio" name="visibility" id="visibilityMilesRadio">
+                <label class="form-check-label" for="visibilityMilesRadio">
+                    mérföld
                 </label>
                 </div> 
             </div>
