--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <button class="btn btn-outline-warning m-2 navbutton" id="forecastDataButton">Előrejelzés</button>
                     </li>
                     <li class="nav-item">
-                        <button class="btn btn-outline-danger m-2" id="historicalDataButton">Korábbi adatok</button>
+                        <button class="btn btn-danger m-2" id="alertsDataButton">Figyelmeztetések</button>
                     </li>
                 </ul>
                 </div>
@@ -118,7 +118,6 @@
         </div>
         <div id="currentData"></div>
         <div id="forecastData"></div>
-        <div id="historicalData"></div>
     </div>
     <script type="module" src="SCRIPTS/script.js"></script>
 </body>
