--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <button class="btn btn-outline-warning m-2 navbutton" id="forecastDataButton">Előrejelzés</button>
                     </li>
                     <li class="nav-item">
-                        <button class="btn btn-danger m-2" id="alertsDataButton">Figyelmeztetések</button>
+                        <button class="btn btn-danger m-2" id="alertsDataButton" data-bs-toggle="modal" data-bs-target="#alertsModal">Figyelmeztetések</button>
                     </li>
                 </ul>
                 </div>
@@ -119,6 +119,22 @@
         <div id="currentData"></div>
         <div id="forecastData"></div>
     </div>
+    <div class="modal fade" id="alertsModal" tabindex="-1" aria-labelledby="alertsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="alertsModalLabel">Figyelmeztetések</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" id="alertsContent">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Bezár</button>
+            </div>
+        </div>
+    </div>
+</div>
     <script type="module" src="SCRIPTS/script.js"></script>
 </body>
 </html>
